--- a/haxl-local-test.cabal
+++ b/haxl-local-test.cabal
@@ -15,7 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:
+      Actors
+    , Movies
   build-depends:
       base >= 4.7 && < 5
     , unordered-containers -any
