--- a/haxl-local-test.cabal
+++ b/haxl-local-test.cabal
@@ -23,6 +23,7 @@ library
     , unordered-containers -any
     , haxl >=0.3
     , hashable >=1.2
+    , async
   default-language:    Haskell2010
 
 executable haxl-local-test-exe
