--- a/haxl-local-test.cabal
+++ b/haxl-local-test.cabal
@@ -16,8 +16,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:
-      Actors
-    , Movies
+      DataSources.Actors
+    , DataSources.Movies
   build-depends:
       base >= 4.7 && < 5
     , unordered-containers -any
